--- a/Estilos/Estilo1.css
+++ b/Estilos/Estilo1.css
@@ -21,6 +21,30 @@ div {
     
 }
 
+h1{
+    color:white;
+    text-align: center;
+    font-size: 50px;
+}
+
+
+h2{
+    color:white;
+    text-align: center;
+    font-size: 30px;
+}
+
+.LogoCentrado{
+    margin-left: auto;
+    margin-right: auto;
+    display:block;
+}
+
+p{
+    text-align: justify;
+    color: white;
+
+}
 #para1 {
     text-align: center;
     color: red;
